testsuite/tests/langkit_support/diagnostics_output/test.out
Regular diagnostic case
main.adb:1:3: error: Test message
1 | A simple line
  |   ^^^^^^

Beginning of line no range message
main.adb:1:1: error: Test message
1 | A simple line
  | 

